aws/01_04_vps_ebs_eip_count/main.tf
resource "aws_key_pair" "deployer-key" {
  key_name   = "${var.project_name}-deployer-key"
  public_key = file(var.ssh_key_path)
}


resource "aws_security_group" "allow_ssh_http_https" {
  name        = "allow_ssh_http_https_${var.project_name}"
  description = "Allow SSH, HTTP and HTTPS inbound traffic"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH from VPC ${var.project_name}"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP from VPC ${var.project_name}"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS from VPC ${var.project_name}"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_ssh_http_https"
  }
}


resource "aws_instance" "web" {
  count                  = var.count_value
  ami                    = data.aws_ami.ubuntu.id
  availability_zone      = var.availability_zone
  instance_type          = var.instance_type
  vpc_security_group_ids = [aws_security_group.allow_ssh_http_https.id]

  user_data = templatefile(
    "${path.module}/userdata.sh",
    {}
  )
  key_name = aws_key_pair.deployer-key.key_name
  tags = {
    Name = "${var.project_name}-web-instance-${count.index}"
  }
}


resource "aws_ebs_volume" "web" {
  count             = var.count_value
  availability_zone = var.availability_zone
  size              = 4
  type              = "gp3"
  encrypted         = true
  tags = {
    Name = "${var.project_name}-web-ebs-${count.index}"
  }
}


resource "aws_volume_attachment" "web" {
  count       = var.count_value
  device_name = "/dev/sdh"
  volume_id   = element(aws_ebs_volume.web.*.id, count.index)
  instance_id = element(aws_instance.web.*.id, count.index)
}
